--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,12 @@
         <vault.user>admin</vault.user>
         <vault.password>admin</vault.password>
 
+        <!--sonar url-->
+        <sonar.host.url>http://localhost:9000</sonar.host.url>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
     </properties>
 
     <build>
@@ -123,6 +127,12 @@
                 <configuration>
                     <downloadSources>true</downloadSources>
                 </configuration>
+            </plugin>
+            <!-- Maven Surefire Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20</version>
             </plugin>
         </plugins>
         <pluginManagement>
@@ -549,6 +559,12 @@
                 <artifactId>junit-addons</artifactId>
                 <version>1.4</version>
                 <scope>test</scope>
+            </dependency>
+            <!--sonar scanner-->
+            <dependency>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
